--- a/main.html
+++ b/main.html
@@ -7,6 +7,23 @@
 </head>
 
 <body>
+	<nav>
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About us</a></li>
+      <li><a href="#contact">Contact us</a></li>
+    </ul>
+  </nav>
+
+  <!-- Image Heading and Display -->
+  <section>
+    <h2>3 random images</h2>
+    <div class="images">
+      <img src="https://picsum.photos/id/123/200/300" alt="Random image">
+      <img src="https://picsum.photos/id/124/200/300" alt="Random image">
+      <img src="https://picsum.photos/id/125/200/300" alt="Random image">
+    </div>
+  </section>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
